--- a/amplify.yml
+++ b/amplify.yml
@@ -11,6 +11,9 @@ frontend:
     baseDirectory: build
     files:
       - '**/*'
+  cache:
+    paths:
+      - node_modules/**/*
 backend:
   phases:
     preBuild:
