--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - yarn
     build:
       commands:
-        - yarn build
+        - yarn start
   artifacts:
     baseDirectory: build
     files:
