--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.43",
-    "deck.gl": "^8.9.13",
+    "deck.gl": "8.8.0",
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
     "gl-matrix": "^3.4.3",
@@ -33,6 +33,7 @@
     "web-vitals": "^2.1.4"
   },
   "resolutions": {
+    "deck.gl": "8.9.15",
     "@deck.gl/react": "^8.8.0",
     "@deck.gl/core": "^8.8.0",
     "@deck.gl/layers": "^8.8.0",
