--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.43",
-    "deck.gl": "8.8.0",
+    "deck.gl": "^8.8.0",
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
     "gl-matrix": "^3.4.3",
@@ -45,6 +45,7 @@
     "@luma.gl/constants": "^8.5.20"
   },
   "overrides": {
+    "deck.gl": "8.8.0",
     "@deck.gl/react": "^8.8.0",
     "@deck.gl/core": "^8.8.0",
     "@deck.gl/layers": "^8.8.0",
