--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
     "gl-matrix": "^3.4.3",
+    "jszip": "^3.10.1",
     "mapbox-gl": "^1.13.0",
     "papaparse": "^5.3.2",
     "pretty-format": "^29.0.3",
