--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.43",
-    "deck.gl": "^8.9.18",
-    "@deck.gl/react": "^8.9.18",
+    "deck.gl": "^8.8.23",
+    "@deck.gl/react": "^8.9.19",
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
     "gl-matrix": "^3.4.3",
-    "mapbox-gl": "^1.13.0",
+    "mapbox-gl": "npm:empty-npm-package@1.0.0",
     "papaparse": "^5.3.2",
     "pretty-format": "^29.0.3",
     "react": "^18.2.0",
@@ -34,24 +34,24 @@
     "web-vitals": "^2.1.4"
   },
   "resolutions": {
-    "deck.gl": "8.9.18",
-    "@deck.gl/react": "8.9.18",
-    "@deck.gl/core": "8.9.18",
-    "@deck.gl/layers": "8.9.18",
-    "@deck.gl/extensions": "8.9.18",
-    "@deck.gl/geo-layers": "8.9.18",
+    "deck.gl": "8.9.19",
+    "@deck.gl/react": "8.9.19",
+    "@deck.gl/core": "8.9.19",
+    "@deck.gl/layers": "8.9.19",
+    "@deck.gl/extensions": "8.9.19",
+    "@deck.gl/geo-layers": "8.9.19",
     "@luma.gl/core": "^8.5.20",
     "@luma.gl/webgl": "^8.5.20",
     "@luma.gl/shadertools": "^8.5.20",
     "@luma.gl/constants": "^8.5.20"
   },
   "overrides": {
-    "deck.gl": "8.9.18",
-    "@deck.gl/react": "8.9.18",
-    "@deck.gl/core": "8.9.18",
-    "@deck.gl/layers": "8.9.18",
-    "@deck.gl/extensions": "8.9.18",
-    "@deck.gl/geo-layers": "8.9.18",
+    "deck.gl": "8.9.19",
+    "@deck.gl/react": "8.9.19",
+    "@deck.gl/core": "8.9.19",
+    "@deck.gl/layers": "8.9.19",
+    "@deck.gl/extensions": "8.9.19",
+    "@deck.gl/geo-layers": "8.9.19",
     "@luma.gl/core": "^8.5.20",
     "@luma.gl/webgl": "^8.5.20",
     "@luma.gl/shadertools": "^8.5.20",
