--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
     "gl-matrix": "^3.4.3",
-    "mapbox-gl": "npm:empty-npm-package@1.0.0",
+    "mapbox-gl": "^1.13.0",
     "papaparse": "^5.3.2",
     "pretty-format": "^29.0.3",
     "react": "^18.2.0",
