--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@deck.gl/react": "8.9.21",
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
     "@mapbox/tiny-sdf": "2.0.6",
@@ -16,10 +17,10 @@
     "@testing-library/user-event": "13.5.0",
     "aws-amplify": "4.3.43",
     "deck.gl": "8.9.21",
-    "@deck.gl/react": "8.9.21",
     "echarts": "5.4.1",
     "echarts-for-react": "3.0.2",
     "gl-matrix": "3.4.3",
+    "jszip": "^3.10.1",
     "mapbox-gl": "1.13.0",
     "papaparse": "5.3.2",
     "pretty-format": "29.0.3",
@@ -30,6 +31,7 @@
     "react-redux": "8.0.5",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.7.4",
     "styled-components": "5.3.5",
     "web-vitals": "2.1.4"
   },
