--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@mui/lab": "5.0.0-alpha.103",
     "@mui/material": "5.10.4",
     "@mui/styled-engine-sc": "5.10.3",
+    "@mui/x-data-grid": "^6.18.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "@types/path-browserify": "^1.0.2",
     "aws-amplify": "4.3.43",
     "deck.gl": "^8.9.28",
     "echarts": "5.4.1",
     "echarts-for-react": "3.0.2",
+    "elkjs": "^0.8.2",
     "gl-matrix": "3.4.3",
     "jszip": "^3.10.1",
     "mapbox-gl": "1.13.0",
