--- a/package.json
+++ b/package.json
@@ -33,9 +33,19 @@
     "styled-components": "5.3.5",
     "web-vitals": "2.1.4"
   },
+  "overrides": {
+    "@deck.gl/core": "^8.9.28",
+    "@deck.gl/layers": "^8.9.28",
+    "@deck.gl/extensions": "^8.9.28",
+    "@deck.gl/geo-layers": "^8.9.28",
+    "@luma.gl/core": "8.5.21"
+  },
   "resolutions": {
-    "@luma.gl/core": "^8.5.21",
-    "deck.gl": "^8.9.28"
+    "@deck.gl/core": "^8.9.28",
+    "@deck.gl/layers": "^8.9.28",
+    "@deck.gl/extensions": "^8.9.28",
+    "@deck.gl/geo-layers": "^8.9.28",
+    "@luma.gl/core": "8.5.21"
   },
   "scripts": {
     "start": "react-scripts start",
