--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@deck.gl/core": "^8.9.34",
+    "@deck.gl/extensions": "^8.9.34",
+    "@deck.gl/geo-layers": "^8.9.34",
+    "@deck.gl/layers": "^8.9.34",
+    "@deck.gl/mesh-layers": "^8.9.34",
+    "@deck.gl/react": "^8.9.34",
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
     "@mapbox/tiny-sdf": "2.0.6",
@@ -36,6 +40,8 @@
     "mapbox-gl": "1.13.0",
     "papaparse": "5.3.2",
     "pretty-format": "29.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-map-gl": "7.0.21",
     "react-material-ui-carousel": "3.4.2",
     "react-redux": "8.0.5",
@@ -44,6 +50,22 @@
     "reactflow": "^11.10.1",
     "styled-components": "5.3.5",
     "web-vitals": "2.1.4"
+  },
+  "overrides": {
+    "@deck.gl/core": "^8.9.19",
+    "@deck.gl/layers": "^8.9.19",
+    "@deck.gl/extensions": "^8.9.19",
+    "@deck.gl/geo-layers": "^8.9.19",
+    "@luma.gl/core": "^8.5.20",
+    "typescript": "^5.0.0"
+  },
+  "resolutions": {
+    "@deck.gl/core": "^8.9.19",
+    "@deck.gl/layers": "^8.9.19",
+    "@deck.gl/extensions": "^8.9.19",
+    "@deck.gl/geo-layers": "^8.9.19",
+    "@luma.gl/core": "^8.5.20",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
