--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "typescript": "^5.0.0"
   },
   "resolutions": {
+    "deck.gl": "8.9.35",
     "@deck.gl/core": "^8.9.19",
     "@deck.gl/layers": "^8.9.19",
     "@deck.gl/extensions": "^8.9.19",
