--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@deck.gl/layers": "^8.9.34",
     "@deck.gl/mesh-layers": "^8.9.34",
     "@deck.gl/react": "^8.9.34",
-    "@emotion/react": "11.10.4",
-    "@emotion/styled": "11.10.4",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@mapbox/tiny-sdf": "2.0.6",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
+    "@mui/icons-material": "^5.15.14",
     "@mui/lab": "5.0.0-alpha.103",
-    "@mui/material": "5.10.4",
+    "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "5.10.3",
     "@mui/x-data-grid": "^6.18.1",
     "@testing-library/jest-dom": "5.16.5",
@@ -43,7 +44,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "7.0.21",
-    "react-material-ui-carousel": "3.4.2",
     "react-redux": "8.0.5",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
