--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "@types/path-browserify": "^1.0.2",
-    "aws-amplify": "4.3.43",
+    "aws-amplify": "^6.0.28",
     "deck.gl": "8.9.34",
     "echarts": "5.4.1",
     "echarts-for-react": "3.0.2",
@@ -40,6 +40,7 @@
     "jszip": "^3.10.1",
     "mapbox-gl": "1.13.0",
     "papaparse": "5.3.2",
+    "posthog-js": "^1.128.1",
     "pretty-format": "29.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
