--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-amplify": "^3.744.0",
     "@aws-sdk/types": "^3.734.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@deck.gl/core": "^8.9.34",
