--- a/package.json
+++ b/package.json
@@ -1,83 +1,41 @@
 {
-  "name": "ghn",
+  "name": "ghn2",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-amplify": "^3.744.0",
-    "@aws-sdk/types": "^3.734.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@danmarshall/deckgl-typings": "^4.0.0",
     "@deck.gl/core": "^8.9.34",
-    "@deck.gl/extensions": "^8.9.34",
-    "@deck.gl/geo-layers": "^8.9.34",
-    "@deck.gl/layers": "^8.9.34",
-    "@deck.gl/mesh-layers": "^8.9.34",
-    "@deck.gl/react": "^8.9.34",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@mapbox/tiny-sdf": "2.0.6",
-    "@material-ui/core": "4.12.4",
-    "@material-ui/icons": "4.11.3",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/lab": "5.0.0-alpha.103",
-    "@mui/material": "^5.15.14",
-    "@mui/styled-engine-sc": "5.10.3",
-    "@mui/x-data-grid": "^6.18.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "13.5.0",
-    "@types/path-browserify": "^1.0.2",
-    "aws-amplify": "^6.0.28",
-    "deck.gl": "8.9.34",
-    "echarts": "5.4.1",
-    "echarts-for-react": "3.0.2",
-    "elkjs": "^0.8.2",
-    "gl-matrix": "3.4.3",
-    "jszip": "^3.10.1",
-    "mapbox-gl": "1.13.0",
-    "papaparse": "5.3.2",
-    "posthog-js": "^1.128.1",
-    "pretty-format": "29.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-map-gl": "7.0.21",
-    "react-redux": "8.0.5",
-    "react-router-dom": "6.3.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "5.3.5",
-    "web-vitals": "2.1.4"
-  },
-  "overrides": {
-    "@deck.gl/core": "^8.9.19",
-    "@deck.gl/layers": "^8.9.19",
-    "@deck.gl/extensions": "^8.9.19",
-    "@deck.gl/geo-layers": "^8.9.19",
-    "@luma.gl/core": "^8.5.20",
-    "typescript": "^5.0.0"
-  },
-  "resolutions": {
-    "deck.gl": "8.9.35",
-    "@deck.gl/core": "^8.9.19",
-    "@deck.gl/layers": "^8.9.19",
-    "@deck.gl/extensions": "^8.9.19",
-    "@deck.gl/geo-layers": "^8.9.19",
-    "@luma.gl/core": "^8.5.20",
-    "typescript": "^5.0.0"
+    "@deck.gl/react": "8.9.34",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
+    "maplibre-gl": "^4.7.1",
+    "next": "15.1.0",
+    "posthog-js": "^1.217.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-map-gl": "^7.1.7",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^3.0.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^3.0.8"
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
