--- a/amplify.yml
+++ b/amplify.yml
@@ -6,8 +6,7 @@ frontend:
         - yarn
     build:
       commands:
-        - yarn build
-        - yarn start
+        - yarn run build
   artifacts:
     baseDirectory: .next
     files:
