--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+/.next*
 
 # misc
 .DS_Store
@@ -21,6 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
 
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
