--- a/package.json
+++ b/package.json
@@ -2,19 +2,35 @@
   "name": "ghn",
   "private": false,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@danmarshall/deckgl-typings": "^4.0.0",
-    "@deck.gl/core": "^8.9.34",
-    "@deck.gl/react": "8.9.34",
+    "@deck.gl/core": "^8.9.14",
+    "@deck.gl/extensions": "^8.9.14",
+    "@deck.gl/geo-layers": "^8.9.14",
+    "@deck.gl/layers": "^8.9.14",
+    "@deck.gl/mesh-layers": "^8.9.14",
+    "@deck.gl/react": "^8.9.14",
+    "@duckdb/duckdb-wasm": "^1.29.0",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "^5.66.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "default-passive-events": "^2.0.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "lucide-react": "^0.475.0",
     "maplibre-gl": "^4.7.1",
     "next": "15.1.0",
@@ -23,6 +39,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-map-gl": "^7.1.7",
+    "react-responsive": "^10.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
